Bug#32023 ndb_mgmd is slow to repsond when no nodes are up